--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,6 @@
 	<classpathentry kind="src" path="interfaces"/>
 	<classpathentry kind="src" path="resources"/>
 	<classpathentry exported="true" kind="con" path="org.testng.TESTNG_CONTAINER"/>
-	<classpathentry exported="true" kind="lib" path="lib/selenium-server-standalone-3.9.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-server-standalone-3.9.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
